[gd_scene load_steps=4 format=3 uid="uid://c3dxj4ftggn1"]

[ext_resource type="Script" uid="uid://dhu4k7a5172jb" path="res://UI/pause_menu.gd" id="1_jfm1e"]
[ext_resource type="Shader" uid="uid://el6xm7vlngrr" path="res://UI/pause_menu.gdshader" id="2_03fe5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nwcfo"]
shader = ExtResource("2_03fe5")
shader_parameter/lod = 0.50000002375

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jfm1e")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_nwcfo")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PausePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -212.0
offset_right = 218.0
offset_bottom = 223.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -219.5
offset_top = -219.0
offset_right = 219.5
offset_bottom = 219.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume_button" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Options_button" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Options"

[node name="Exit_button" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Exit"

[node name="SettingsMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.5
offset_top = -93.5
offset_right = 189.5
offset_bottom = 93.5
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsPanel" type="Panel" parent="SettingsMenu"]
layout_mode = 0
offset_right = 378.0
offset_bottom = 190.0

[node name="back" type="Button" parent="SettingsMenu/SettingsPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 160.0
offset_right = 47.0
offset_bottom = 191.0
text = "Back"

[node name="Sensitivity" type="HSlider" parent="SettingsMenu/SettingsPanel"]
layout_mode = 0
offset_left = 91.0
offset_top = 8.0
offset_right = 257.0
offset_bottom = 35.0
min_value = 0.05
max_value = 1.0
step = 0.01
value = 0.05

[node name="Label" type="Label" parent="SettingsMenu/SettingsPanel"]
layout_mode = 0
offset_left = -1.0
offset_top = 8.0
offset_right = 79.0
offset_bottom = 31.0
text = "Sensitivity"

[connection signal="pressed" from="PausePanel/VBoxContainer/Resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PausePanel/VBoxContainer/Options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PausePanel/VBoxContainer/Exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="SettingsMenu/SettingsPanel/back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="SettingsMenu/SettingsPanel/Sensitivity" to="." method="_on_sensitivity_value_changed"]
